remove video support from background, hardcode bg images in css in prep for dark mode, fix socials

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -47,6 +47,7 @@
 * aside *
 ************/
 .socials {
+  z-index: 1;
   position: absolute;
   top: 0;
   right: 0;
