--- a/src/components/background.module.css
+++ b/src/components/background.module.css
@@ -30,15 +30,14 @@
   }
 }
 
-.video {
-  min-width: 100%;
-  min-height: 100vh;
-  max-width: none;
-  max-height: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.bg1 {
+  background-image: url('/assets/stages/rooftop_day/shc_rooftop_day_sky.png');
+}
+.bg2 {
+  background-image: url('/assets/stages/rooftop_day/shc_rooftop_day_buildings.png');
+}
+.bg3 {
+  background-image: url('/assets/stages/rooftop_day/shc_rooftop_day_platform.png');
 }
 
 .content {
